<resources>
    <string name="about">About</string>
    <string name="app_name" translatable="false">GitHub User</string>
    <string name="author_name" translatable="false">Norman Bhaskara</string>
    <string name="author_email" translatable="false">normanbhaskara@gmail.com</string>
    <string name="favorite">Favourite</string>
    <string name="favorite_add">%s added to Favourite</string>
    <string name="favorite_remove">%s removed from Favourite</string>
    <string name="followers" translatable="false">Followers</string>
    <string name="following" translatable="false">Following</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="language_summary">Change language</string>
    <string name="no_favourite">Data not found</string>
    <string name="not_found">Data not found</string>
    <string name="not_have">%1$s doesn\'t have %2$s</string>
    <string name="reminder">Daily reminder</string>
    <string name="reminder_key" translatable="false">reminder</string>
    <string name="reminder_off">Daily reminder off</string>
    <string name="reminder_on">Daily reminder on </string>
    <string name="reminder_msg">This is GitHub User app reminder notification</string>
    <string name="reminder_time" translatable="false">08:00</string>
    <string name="repository" translatable="false">Repository</string>
    <string name="search_hint">Input GitHub username</string>
    <string name="settings">Settings</string>
    <string name="source_code" translatable="false">Source Code</string>
    <string name="theme_key" translatable="false">themePref</string>
    <string name="theme">Application Theme</string>
</resources>
