<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.norman1.normanbhaskara.data.models.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.DetailsFragment">

        <ImageView
            android:id="@+id/coverUserImageView"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:transitionName="imageView_trans"
            app:avatar='@{data.avatar_url ?? "" }'
            app:layout_constraintBottom_toTopOf="@+id/tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="372dp"
            android:layout_height="192dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="@dimen/spacing_large"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cardImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            app:srcCompat="@drawable/background" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/box"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:transitionName="imageView_trans"
            app:avatar='@{data.avatar_url ?? "" }'
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text='@{data.name}'
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_username"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text='@{data.login}'
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/txt_company"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            tools:text="@tools:sample/last_names" />

        <TextView
            android:id="@+id/txt_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLength="23"
            android:text="@{data.company}"
            android:textAlignment="gravity"
            android:textSize="15sp"
            android:visibility="@{data.company!=null? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/txt_location"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/txt_username"
            tools:text="@tools:sample/cities"
            app:drawableStartCompat="@drawable/ic_office" />

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLength="21"
            android:text="@{data.location}"
            android:textAlignment="gravity"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            android:visibility="@{data.location!=null? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/txt_company"
            tools:text="@tools:sample/cities"
            app:drawableStartCompat="@drawable/ic_location" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="120dp" />

        <ImageView
            android:id="@+id/repositoryImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="60dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/txt_repository"
            app:layout_constraintEnd_toStartOf="@+id/followerImageView"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/storage" />

        <TextView
            android:id="@+id/txt_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{data.public_repos}"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textRepository"
            app:layout_constraintEnd_toEndOf="@+id/repositoryImageView"
            app:layout_constraintStart_toStartOf="@+id/repositoryImageView"
            app:layout_constraintTop_toBottomOf="@+id/repositoryImageView"
            tools:text="@tools:sample/us_zipcodes" />

        <TextView
            android:id="@+id/textRepository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/txt_repository"
            app:layout_constraintStart_toStartOf="@+id/txt_repository"
            app:layout_constraintTop_toBottomOf="@+id/txt_repository" />

        <ImageView
            android:id="@+id/followerImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/txt_follower"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/follower" />

        <TextView
            android:id="@+id/txt_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{data.followers}"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textFollower"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/followerImageView"
            tools:text="@tools:sample/us_zipcodes" />

        <TextView
            android:id="@+id/textFollower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/txt_follower" />

        <ImageView
            android:id="@+id/followingImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="160dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/txt_following"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/following" />

        <TextView
            android:id="@+id/txt_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:text="@{data.following}"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textFollowing"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/followingImageView"
            tools:text="@tools:sample/us_zipcodes" />

        <TextView
            android:id="@+id/textFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:text="@string/following"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/txt_following" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coverUserImageView" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_large"
            android:background="?selectableItemBackground"
            app:backgroundTint="@color/splashBackground"
            app:borderWidth="1dp"
            app:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_favorite_border"
            app:tint="@color/design_default_color_error" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
